contrasena ->> contraseña en login.ejs

--- a/views/principal/login.ejs
+++ b/views/principal/login.ejs
@@ -41,7 +41,7 @@
                 <input class="input" type="email" id="correo" name="correo" required>
             
                 <label for="contraseña" class="input">Contraseña:</label>
-                <input class="input" type="password" id="contraseña" name="contrasena" required>
+                <input class="input" type="password" id="contraseña" name="contraseña" required>
             
                 <button class="btn" type="submit">Iniciar Sesión</button>
             </form>
