--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,7 +10,7 @@
 nav{
     display: flex;
     width: 100%;
-    background: red;
+    background: #FF7F32;
     position: relative;
     justify-content: space-between;
     text-align: center;
