agregando imagenes y mejorando index

--- a/views/principal/index.ejs
+++ b/views/principal/index.ejs
@@ -425,8 +425,9 @@
     <div class="hero">
         <div class="slideshow">
             <img src="https://ipasa.mx/wp-content/uploads/2023/11/tubo-galvanizado-2-1024x768.webp" alt="Imagen 1">
-            <img src="/img/ferreteria/tinaco1.jpg" alt="Imagen 2">
-            <img src="/img/ferreteria/tinaco2.jpg" alt="Imagen 3">
+            <img src="/img/ferreteria/presentacion1.jpg" alt="Imagen 1">
+            <img src="/img/ferreteria/presentacion2.jpg" alt="Imagen 2">
+            <img src="/img/ferreteria/presentacion3.jpg" alt="Imagen 3">
         </div>
         <div class="hero-content">
             <h1>Tu Mejor Aliado en Ferretería</h1>
