--- a/views/principal/index.ejs
+++ b/views/principal/index.ejs
@@ -184,12 +184,15 @@
 
 /* Mejora de transiciones */
 .hero .slideshow img:nth-child(1) {
-    animation-delay: 0s;
+    animation-delay: 3;
 }
 .hero .slideshow img:nth-child(2) {
     animation-delay: 6s;
 }
 .hero .slideshow img:nth-child(3) {
+    animation-delay: 8s;
+}
+.hero .slideshow img:nth-child(4) {
     animation-delay: 12s;
 }
 
